<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_text"
        android:id="@+id/welcomeTextView"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Enter Meowsername"
        android:ems="10"
        android:id="@+id/usernameEditText"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_vertical"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="Enter Password"
        android:id="@+id/passwordEditText"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_vertical"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/loginButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sign_up_link"
        android:id="@+id/createAccountPromptTextView"
        android:layout_marginTop="45dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_button"
        android:id="@+id/createAccountButton"
        android:layout_marginTop="29dp"
        android:layout_gravity="center_horizontal"
        />
</LinearLayout>
